<resources>
    <string name="app_name">Test</string>
    <string name="first_question_str">Оцените работу нашего сервиса</string>
    <string name="great_str">Отлично</string>
    <string name="good_str">Хорошо</string>
    <string name="fine_str">Нормально</string>
    <string name="bad_str">Плохо</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="second_question_str">Что вам не понравилось?</string>
    <string name="range_str">Ассортимент</string>
    <string name="quality_str">Качество обслуживания</string>
    <string name="price_str">Цена</string>
    <string name="thanks_str">Спасибо за ваш отзыв!</string>
    <string name="insert_point_string">Нажав, выберите номер точки</string>
    <string name="save_settings_btn_str">Сохранить</string>
</resources>
