<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_image"
    tools:context="ltd.vblago.test.activity.MainActivity">

    <View
        android:id="@+id/settings_view"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignBottom="@+id/textView"
        android:layout_alignStart="@+id/linearLayout"
        android:background="@drawable/transparent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="60dp"
        android:text="@string/first_question_str"
        android:textSize="50sp"
        android:id="@+id/textView" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        android:layout_centerVertical="true"
        android:id="@+id/linearLayout"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/great_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/one"
                android:contentDescription="@string/great_str" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:text="@string/great_str"
                android:textAlignment="center"
                android:textSize="40sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/good_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/two"
                android:contentDescription="@string/good_str" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:text="@string/good_str"
                android:textAlignment="center"
                android:textSize="40sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/fine_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/three"
                android:contentDescription="@string/fine_str" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:text="@string/fine_str"
                android:textAlignment="center"
                android:textSize="40sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/bad_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/four"
                android:contentDescription="@string/bad_str" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:text="@string/bad_str"
                android:textAlignment="center"
                android:textSize="40sp"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
